// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions should render correctly 1`] = `
Array [
  <button
    className="BareButton-root-0-1-3 BareButton-root-0-1-10 BareButton-primary-0-1-7 BareButton-small-0-1-5 "
    data-qa="apply-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Apply
  </button>,
  <button
    className="Actions-cancelButton-0-1-2 "
    data-qa="cancel-button"
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>,
]
`;

exports[`Actions should render correctly with defined dataQa 1`] = `
Array [
  <button
    className="BareButton-root-0-1-3 BareButton-root-0-1-11 BareButton-primary-0-1-7 BareButton-small-0-1-5 "
    data-qa="khorne-apply-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Apply
  </button>,
  <button
    className="Actions-cancelButton-0-1-2 "
    data-qa="khorne-cancel-button"
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>,
]
`;
